--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.294.0",
     "next": "^14.0.0",
     "postcss": "^8.4.31",
@@ -36,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-image-gallery": "^1.2.11",
+    "recharts": "^3.5.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
